# pyWrskp

./: .gitignore  .gitlab-ci-templates.yml  .gitlab-ci.yml  .gitpod.yml  LICENSE  README.md  black_changes.patch  python_changes.patch  requirements.txt  test_file.txt  testing.txt
.forgejo/workflows/: build_package.yaml  python_formatter.yaml  rust_formatter.yaml
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  other-issues.md
.github/workflows/: codeql-analysis.yml  custom_tests.yml  python-app.yml
docs/: Readme.txt  notes.txt
docs/doc_generation/: generate.md
docs/examples/: pygame_example.txt
docs/html_css_refrence_sheets/: css.md  html.md
docs/txt-files/: README.txt  Readme.txt  animal_chooser_atturbites.txt  animal_chooser_options.txt  info_saver.txt  people.txt  phone_log.txt  temp_jupyter-lab_vars.txt
noahs_files/docs/: Readme.txt
src/: README.md  temp.py
src/Caribou_coding/: Question1.py  Question6.py  Question7.py
src/FrenchGame/: FrenchGameOrginal.py  FrenchGamePSG.py  FrenchGamePSGSave.py  Helper.py  high_scores_trivia.txt
src/Games/: game.py
src/Hackathon/: Main.py  sarim.py
src/Imran_Sciene_Fair_2023-2024/: main.py
src/JupyterLab/: First_notebook.ipynb  Readme.txt  The_Land_Of_Power.ipynb  bordem.ipynb  game.ipynb  python_tutorial.ipynb  youtube_python_tutorial.ipynb
src/MultiProgram/: Main.py  helper.py  log.txt  txt.txt
src/Noah's files/: Readme.txt  math_clicker_game.py
src/rust/simple_lib/: Cargo.toml  readme.md
src/rust/simple_lib/src/: input.rs
tests/: test_sample.py
(+10714 files in other folders)
