[package]
name = "simple_lib"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A simple library of helpful functions, really only intended for myself, but published for learning"
readme = "readme.md"
repository = "https://github.com/jonahmakowski/pyWrskp/tree/main/src/rust/simple_lib"
homepage = "https://github.com/jonahmakowski/pyWrskp/tree/main/src/rust/simple_lib"

[dependencies]

